<resources>
    <string name="app_name">E-Commerce</string>
    <string name="action_search">Search</string>
    <string name="action_notification">Notifications</string>
    <string name="action_cart">Cart</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_logout">Log out</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Enter Email</string>
    <string name="prompt_password">Enter Password</string>
    <string name="action_sign_in">Login</string>
    <string name="login">Login now</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="name">Ecommerce</string>
    <string name="forgot">Forgot Password</string>
    <string name="register">Register Now</string>
    <string name="action_sign_up">Register</string>
    <string name="enter_name">Enter Name</string>
    <string name="firstName">Enter firstname</string>
    <string name="lastName">Enter lastname</string>
    <string name="email">Enter email</string>
    <string name="confirm_password">Confirm password</string>
    <string name="contact">Enter contact</string>
    <string name="ecommerce">E-Commerce</string>
    <string name="change_password">Change Password</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="save_product">Save product</string>
    <string name="description_product">Description...</string>
    <string name="price_product">price</string>

    <string name="prompt_item_code">Enter Item Code</string>
    <string name="prompt_item_name">Enter Item Name</string>
    <string name="prompt_category">Category</string>
    <string name="prompt_is_active">Is Active?</string>
    <string name="prompt_price">Enter Price</string>

    <string name="btn_select">Select Multiple Images</string>
    <string name="btn_back">Back</string>
    <string name="btn_register">Register</string>
    <string name="btn_save">Save</string>
    <string name="btn_previous">Previous</string>
    <string name="btn_next">Next</string>
    <string name="btn_delete">Delete</string>

    <string name="error_field_required">This field is required!</string>

    <string name="please_wait">Please Wait</string>
    <string name="authenticating">Authenticating...</string>
    <string name="connecting">Connecting...</string>
    <string name="download">Download...</string>
    <string name="upload">Upload...</string>

    <string-array name="rols">
        <item>SELECT A ROL</item>
        <item>SELLER</item>
        <item>CUSTOMER</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>