<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:orderInCategory="100"
        android:title="@string/action_search"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/action_notifications"
        android:icon="@drawable/ic_notification"
        android:orderInCategory="100"
        android:title="@string/action_notification"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/action_cart"
        android:icon="@drawable/ic_logo"
        android:orderInCategory="100"
        android:title="@string/action_cart"
        app:showAsAction="always" />

</menu>
