<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            android:scrollbarStyle="insideInset"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="32dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:text="E-Commerce"
                    android:textAlignment="center"
                    android:textSize="36sp"
                    />

                <com.mikhaellopez.circularimageview.CircularImageView
                    android:id="@+id/profile"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:clickable="true"
                    android:src="@drawable/ic_user"
                    app:civ_border_width="4dp"
                    app:civ_shadow="true"
                    app:civ_shadow_radius="10dp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/colorOnPrimary"
                        android:hint="@string/firstName"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/lastName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/colorOnPrimary"
                        android:ems="10"
                        android:hint="@string/lastName"
                        android:inputType="textPersonName"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/colorOnPrimary"
                        android:ems="10"
                        android:hint="@string/email"
                        android:inputType="textPersonName"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <Spinner
                    android:id="@+id/roles"
                    android:layout_width="match_parent"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:layout_height="match_parent"
                    />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/contactRegister"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/colorOnPrimary"
                        android:ems="10"
                        android:hint="@string/contact"
                        android:inputType="textPersonName" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/et_date"
                        android:background="?attr/colorOnPrimary"
                        android:hint="Select birthday"
                        android:textAlignment="center"
                        android:textSize="30sp"/>
                </com.google.android.material.textfield.TextInputLayout>


                <Button
                    android:id="@+id/button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="Update"
                    />
            </LinearLayout>

        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>